[package]
name = "lender-loan"
version = "0.0.1"
edition = "2021"
authors = ["Ben Reeves"]
license = "MIT OR Apache-2.0"
description = "Lifetime-erased borrowing across threads"
keywords = ["concurrency", "lifetimes", "borrowing", "arc"]
categories = ["concurrency", "memory-management", "rust-patterns"]

[dependencies]
rsevents = "0.3.1"
